--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
-langchain==0.1.1
-langchain-core==0.1.12
-langchain-google-genai==0.0.6
-pydantic==2.5.2
+asyncio==3.4.3
+dotenv==0.9.9
+langchain==0.3.20
+langchain-community==0.0.13
+langchain-core==0.3.43
+langchain-google-genai==2.1.0
+langchain-community
+pydantic==2.10.6
 pyyaml==6.0.1
-python-dotenv==1.0.0
-tiktoken==0.5.2
-asyncio>=3.4.3
-requests>=2.31.0
-langchain-community>=0.0.10
+requests==2.32.3
+tqdm==4.67.1
 simpleeval
